[package]
name = "rust-ws"
description = "A WebSocket library for Rust."
version = "0.1.0"
authors = [ "ehsanul@ehsanul.com" ]
license = "MIT"
repository = "https://github.com/ehsanul/rust-ws"

[lib]
name = "ws"
path = "src/ws/lib.rs"

[dependencies]
log = "*"
time = "*"
rust-crypto = "*"

[dependencies.http]
git = "https://github.com/chris-morgan/rust-http"
